data/derived/comb/progs/unify/prog0673.ml.out
Characters 21-34:
  let _ = stringOfList string_of_int [];;
                       ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type string -> string
       Type int is not compatible with type string 
